AmicarDP/src/objects/Impuesto__c.object
<CustomObject>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Impuesto_compras__c</fullName>
        <inlineHelpText>Corresponde a la línea 537</inlineHelpText>
        <label>Impuesto compras</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Impuesto_ventas__c</fullName>
        <inlineHelpText>Corresponde a la línea 538</inlineHelpText>
        <label>Impuesto ventas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Solicitud__c</fullName>
        <label>Solicitud</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Declaración de IVA</relationshipLabel>
        <relationshipName>Impuestos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Impuesto</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Id Impuesto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impuestos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>